--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,7 +12,7 @@
             <input type="text" placeholder="Rechercher...">
         </div>
         <div class="menu">
-            <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Evenements</a>
+            <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Évênements</a>
             <a href="/sae301/index.php/lieu" class="nav-link lieux-nav-link">Lieux</a>
             {% if is_granted("ROLE_ADMIN") %}
                 <div><a href="/sae301/index.php/admin"><i class="fa-solid fa-lock"></i>Admin</a></div>
