--- a/public/styles.css
+++ b/public/styles.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4 {
   height: 100%;
   padding-left: 20px;
   padding-right: 20px;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 14px;
 }
 .menu-container .menu .nav-link i {
@@ -140,7 +140,7 @@ h1, h2, h3, h4 {
   cursor: pointer;
   padding: 10px;
   font-size: 14px;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
 }
 .btn:hover {
   background-color: #343434;
@@ -161,7 +161,7 @@ h1, h2, h3, h4 {
   height: 25vh;
   text-align: center;
   color: white;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   background-color: #FF4B3F;
   margin-top: 40px;
@@ -176,7 +176,7 @@ h1, h2, h3, h4 {
   height: 25vh;
   text-align: center;
   color: white;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   background-color: #9747FF;
   margin-top: 40px;
@@ -189,7 +189,7 @@ h1, h2, h3, h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   margin-top: 40px;
   background-color: #343434;
@@ -302,23 +302,31 @@ td {
   border: none;
 }
 
-#manif-titre {
+#manif-container {
+  display: flex;
+}
+#manif-container #manif-titre {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   color: white;
   height: 25vh;
+  width: 100%;
   text-align: left;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   background-color: #9747FF;
   font-size: 20px;
-  margin-top: 40px;
+  position: relative;
+  text-align: center;
 }
-
-#affiche {
-  transform: scale(30%);
+#manif-container #manif-titre h1, #manif-container #manif-titre h2 {
+  text-align: left;
+  float: left;
+  display: inline-block;
+}
+#manif-container #affiche {
+  height: 300px;
   position: absolute;
+  z-index: 1;
 }
 
 @media all and (max-width: 991px) {
