--- a/public/styles.scss
+++ b/public/styles.scss
@@ -101,7 +101,7 @@ h1, h2, h3, h4
       height: 100%;
       padding-left: 20px;
       padding-right: 20px;
-      font-family: "Oscan Expanded Regular";
+      font-family: "Gopher Bold";
       font-size: 14px;
       i {
         margin-right: 10px;
@@ -136,7 +136,7 @@ h1, h2, h3, h4
   cursor: pointer;
   padding: 10px;
   font-size: 14px;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
 
   &:hover {
     background-color: #343434;
@@ -156,7 +156,7 @@ h1, h2, h3, h4
   height: 25vh;
   text-align: center;
   color: white;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   background-color: #FF4B3F;
   margin-top: 40px;
@@ -170,7 +170,7 @@ h1, h2, h3, h4
   height: 25vh;
   text-align: center;
   color: white;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   background-color: #9747FF;
   margin-top: 40px;
@@ -183,7 +183,7 @@ h1, h2, h3, h4
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Oscan Expanded Regular";
+  font-family: "Gopher Bold";
   font-size: 24px;
   margin-top: 40px;
   background-color: #343434;
@@ -292,24 +292,34 @@ td {
   border: none;
 }
 
-#manif-titre
+#manif-container
 {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  height: 25vh;
-  text-align: left;
-  font-family: "Oscan Expanded Regular";
-  background-color: #9747FF;
-  font-size: 20px;
-  margin-top: 40px;
-}
-
-#affiche {
-  transform: scale(30%);
-  position: absolute;
+  #manif-titre
+  {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    height: 25vh;
+    width: 100%;
+    text-align: left;
+    font-family: "Gopher Bold";
+    background-color: #9747FF;
+    font-size: 20px;
+    position: relative;
+    text-align: center;
+    h1, h2 {
+      text-align: left;
+      float: left;
+      display: inline-block;
+    }
+  }
+  #affiche
+  {
+    height: 300px;
+    position: absolute;
+    z-index: 1;
+  }
 }
 
   @media all and (max-width: 991px) {
