--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -8,11 +8,13 @@
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     </style>
 
-    <div id="manif-titre">
-        <h1>{{ Manifs.titre }}</h1>
-        <h2>{{ Manifs.auteur }}</h2>
+    <div id="manif-container">
+        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
+        <div id="manif-titre">
+            <h1>{{ Manifs.titre }}</h1>
+            <h2>{{ Manifs.auteur }}</h2>
+        </div>
     </div>
-    <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
     <div class="example-wrapper">
         <h4>{{ Manifs.genre }}</h4>
         <p>{{ Manifs.heure }}</p>
