--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     <body>
         {% include('menu.html.twig') %}
         {% block body %}{% endblock %}
-
+        {% include('footer.html.twig') %}
     </body>
     <script type="text/javascript" src="{{ asset('scriptgeneral.js') }}"></script>
 </html>
