--- a/public/styles.css
+++ b/public/styles.css
@@ -36,8 +36,11 @@ nav {
 table {
   width: 50%;
 }
-table td {
-  border: 1px solid;
+table tr {
+  border: 1px black solid;
+}
+table tr td {
+  border: none;
   text-align: center;
 }
 
@@ -199,6 +202,7 @@ h1, h2, h3 {
 }
 
 .carte {
+  font-family: "arial", sans-serif;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -329,88 +333,162 @@ td {
   z-index: 1;
 }
 
-.footer-clean {
-  padding: 50px 0;
-  background-color: #fff;
-  color: #4b4c4d;
+.site-footer {
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
 }
-
-.footer-clean h3 {
-  margin-top: 0;
-  margin-bottom: 12px;
-  font-weight: bold;
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+.site-footer hr.small {
+  margin: 20px 0;
+}
+.site-footer h6 {
+  color: #fff;
   font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
-
-.footer-clean ul {
-  padding: 0;
-  list-style: none;
-  line-height: 1.6;
-  font-size: 14px;
-  margin-bottom: 0;
+.site-footer a {
+  color: #737373;
 }
-
-.footer-clean ul a {
-  color: inherit;
+.site-footer a:hover {
+  color: #3366cc;
   text-decoration: none;
-  opacity: 0.8;
 }
-
-.footer-clean ul a:hover {
-  opacity: 1;
-}
-
-.footer-clean .item.social {
+.site-footer .social-icons {
   text-align: right;
 }
-
-@media (max-width: 767px) {
-  .footer-clean .item {
-    text-align: center;
-    padding-bottom: 20px;
-  }
-}
-@media (max-width: 768px) {
-  .footer-clean .item.social {
-    text-align: center;
-  }
-}
-.footer-clean .item.social > a {
-  font-size: 24px;
+.site-footer .social-icons a {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  border: 1px solid #ccc;
-  margin-left: 10px;
-  margin-top: 22px;
-  color: inherit;
-  opacity: 0.75;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
 
-.footer-clean .item.social > a:hover {
-  opacity: 0.9;
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+.footer-links li {
+  display: block;
+}
+.footer-links a {
+  color: #737373;
+}
+.footer-links a:active {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links a:focus {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+
+.footer-links.inline li {
+  display: inline-block;
+}
+
+.copyright-text {
+  margin: 0;
+}
+
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.social-icons a:active {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons a:focus {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
+}
+.social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
+}
+
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
 
 @media (max-width: 991px) {
-  .footer-clean .item.social > a {
-    margin-top: 40px;
+  .site-footer [class^=col-] {
+    margin-bottom: 30px;
   }
 }
 @media (max-width: 767px) {
-  .footer-clean .item.social > a {
-    margin-top: 10px;
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text {
+    text-align: center;
+  }
+  .site-footer .social-icons {
+    text-align: center;
+  }
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
   }
 }
-.footer-clean .copyright {
-  margin-top: 14px;
-  margin-bottom: 0;
-  font-size: 13px;
-  opacity: 0.6;
-}
-
 @media all and (max-width: 991px) {
   header {
     background: transparent;
