--- a/public/styles.scss
+++ b/public/styles.scss
@@ -30,9 +30,12 @@ nav {
   box-shadow: 3px 3px 6px -1px rgba(0, 0, 0, 0.25);}
 table {
   width: 50%;
-  td {
-    border: 1px solid;
-    text-align: center;
+  tr {
+    border: 1px black solid;
+    td {
+      border: none;
+      text-align: center;
+    }
   }
 }
 
@@ -192,6 +195,7 @@ h1, h2, h3
   text-align: center;
 }
 .carte {
+  font-family: 'arial', sans-serif;
   .texte {
     margin-left: 18px;
   }
@@ -321,91 +325,173 @@ td {
     z-index: 1;
   }
 }
-.footer-clean {
-  padding:50px 0;
-  background-color:#fff;
-  color:#4b4c4d;
-}
-
-.footer-clean h3 {
-  margin-top:0;
-  margin-bottom:12px;
-  font-weight:bold;
-  font-size:16px;
-}
-
-.footer-clean ul {
-  padding:0;
-  list-style:none;
-  line-height:1.6;
-  font-size:14px;
-  margin-bottom:0;
-}
-
-.footer-clean ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.8;
-}
-
-.footer-clean ul a:hover {
-  opacity:1;
-}
-
-.footer-clean .item.social {
-  text-align:right;
-}
-
-@media (max-width:767px) {
-  .footer-clean .item {
-    text-align:center;
-    padding-bottom:20px;
+.site-footer {
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  hr {
+    border-top-color: #bbb;
+    opacity: 0.5;
+  }
+  hr.small {
+    margin: 20px 0;
+  }
+  h6 {
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px;
+  }
+  a {
+    color: #737373;
+    &:hover {
+      color: #3366cc;
+      text-decoration: none;
+    }
+  }
+  .social-icons {
+    text-align: right;
+    a {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      margin-left: 6px;
+      margin-right: 0;
+      border-radius: 100%;
+      background-color: #33353d;
+    }
   }
 }
-
-@media (max-width: 768px) {
-  .footer-clean .item.social {
-    text-align:center;
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+  li {
+    display: block;
+  }
+  a {
+    color: #737373;
+    &:active {
+      color: #3366cc;
+      text-decoration: none;
+    }
+    &:focus {
+      color: #3366cc;
+      text-decoration: none;
+    }
+    &:hover {
+      color: #3366cc;
+      text-decoration: none;
+    }
   }
 }
-
-.footer-clean .item.social > a {
-  font-size:24px;
-  width:40px;
-  height:40px;
-  line-height:40px;
-  display:inline-block;
-  text-align:center;
-  border-radius:50%;
-  border:1px solid #ccc;
-  margin-left:10px;
-  margin-top:22px;
-  color:inherit;
-  opacity:0.75;
+.footer-links.inline {
+  li {
+    display: inline-block;
+  }
 }
-
-.footer-clean .item.social > a:hover {
-  opacity:0.9;
+.copyright-text {
+  margin: 0;
 }
-
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  li {
+    display: inline-block;
+    margin-bottom: 4px;
+  }
+  li.title {
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-weight: 700;
+    font-size: 13px;
+  }
+  a {
+    background-color: #eceeef;
+    color: #818a91;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+    &:active {
+      color: #fff;
+      background-color: #29aafe;
+    }
+    &:focus {
+      color: #fff;
+      background-color: #29aafe;
+    }
+    &:hover {
+      color: #fff;
+      background-color: #29aafe;
+    }
+  }
+  a.facebook {
+    &:hover {
+      background-color: #3b5998;
+    }
+  }
+  a.twitter {
+    &:hover {
+      background-color: #00aced;
+    }
+  }
+  a.linkedin {
+    &:hover {
+      background-color: #007bb6;
+    }
+  }
+  a.dribbble {
+    &:hover {
+      background-color: #ea4c89;
+    }
+  }
+}
+.social-icons.size-sm {
+  a {
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px;
+  }
+}
 @media (max-width:991px) {
-  .footer-clean .item.social > a {
-    margin-top:40px;
+  .site-footer {
+    [class^=col-] {
+      margin-bottom: 30px;
+    }
   }
 }
-
 @media (max-width:767px) {
-  .footer-clean .item.social > a {
-    margin-top:10px;
+  .site-footer {
+    padding-bottom: 0;
+    .copyright-text {
+      text-align: center;
+    }
+    .social-icons {
+      text-align: center;
+    }
+  }
+  .social-icons {
+    li.title {
+      display: block;
+      margin-right: 0;
+      font-weight: 600;
+    }
   }
 }
 
-.footer-clean .copyright {
-  margin-top:14px;
-  margin-bottom:0;
-  font-size:13px;
-  opacity:0.6;
-}
 
   @media all and (max-width: 991px) {
     header {
