--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -3,28 +3,22 @@
 {% block title %}Détails{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
 
-    <div id="manif-container">
-        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
-        <div id="manif-titre">
-            <h1>{{ Manifs.titre }}</h1>
-            <h2>{{ Manifs.auteur }}</h2>
-        </div>
+    <div id="manif-titre">
+        <h1>{{ Manifs.titre }}</h1>
+        <h2>{{ Manifs.auteur }}</h2>
     </div>
     <div class="example-wrapper">
-        <h4>{{ Manifs.genre }}</h4>
-        <p>{{ Manifs.heure }}</p>
-        <p>{{ Manifs.date }}</p>
-        <div><p id="prix">{{ Manifs.prix }}</p>€
-        x<input type="number" value="1" min="1" max="99" id="qte"></div>
+        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
         <p>{{ Manifs.description }}</p>
-        <p>{{ Manifs.lieu }}</p>
-        <p>{{ Manifs.lieu.adresse }}</p><input type="hidden" id="id" value="{{ Manifs.id }}">
-        <button id="ajout">ajouter au panier</button>
+        <div class="details-container">
+            <h4>{{ Manifs.genre }}</h4>
+            <p>{{ Manifs.heure }}</p>
+            <p>{{ Manifs.date }}</p>
+            <div><p id="prix">{{ Manifs.prix }}</p>€
+                x<input type="number" value="1" min="1" max="99" id="qte"></div>
+            <button id="ajout">ajouter au panier</button>
+        </div>
 
     </div>
     <script type="text/javascript" src="{{ asset('scriptpagearticles.js') }}"></script>
