--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -29,6 +29,9 @@
     <div id="titre">
         <h2>Evenements</h2>
     </div>
+    <div>
+        {{ form(form) }}
+    </div>
     <div id="manifs">
         {% for Manifs in Manifs %}
             <div class="carte">
