--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -29,7 +29,7 @@
     <div id="titre">
         <h2>Evenements</h2>
     </div>
-    <div>
+    <div id="form">
         {{ form(form) }}
     </div>
     <div id="manifs">
