--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,7 +9,7 @@
     <div class="menu-container">
         <div class="search-bar">
             <img src="{{ asset('Image/assets/search.png') }}" alt="search-icon">
-{#            <input type="text" placeholder="Rechercher...">#}
+            <input type="text" placeholder="Rechercher...">
         </div>
         <div class="menu">
             <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Évênements</a>
