--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,18 @@ table tr td {
   text-align: center;
 }
 
+#form {
+  display: flex;
+}
+#form .search-bar2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+  height: 3vh;
+  width: 30vw;
+  padding: 20px;
+  border-bottom: solid black 3px;
+}
 h1, h2, h3 {
   font-weight: normal;
 }
