--- a/public/styles.scss
+++ b/public/styles.scss
@@ -38,6 +38,22 @@ table {
     }
   }
 }
+#form {
+  display: flex;
+  .search-bar2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    height: 3vh;
+    width: 30vw;
+    padding: 20px;
+    border-bottom: solid black 3px;
+  }
+
+  .bouton {
+
+  }
+}
 
 h1, h2, h3
 {
