--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div id="manif-titre">
-        <h1>{{ Manifs.titre }}</h1>
+        <h1 id="titre">{{ Manifs.titre }}</h1>
         <h2>{{ Manifs.auteur }}</h2>
     </div>
     <div class="example-wrapper">
@@ -17,6 +17,7 @@
             <p>{{ Manifs.date }}</p>
             <div><p id="prix">{{ Manifs.prix }}</p>€
                 x<input type="number" value="1" min="1" max="99" id="qte"></div>
+            <input type="hidden" id="id" value="{{ Manifs.id }}">
             <button id="ajout">ajouter au panier</button>
         </div>
 
