--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,14 +12,15 @@
             <input type="text" placeholder="Rechercher...">
         </div>
         <div class="menu">
+            <a href="/sae301/index.php/accueil" class="nav-link">Accueil</a>
             <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Évênements</a>
             <a href="/sae301/index.php/lieu" class="nav-link lieux-nav-link">Lieux</a>
             {% if is_granted("ROLE_ADMIN") %}
-                <div><a href="/sae301/index.php/admin"><i class="fa-solid fa-lock"></i>Admin</a></div>
+                <a href="/sae301/index.php/admin" class="nav-link"><i class="fa-solid fa-lock"></i>Admin</a>
             {% endif %}
 
             {% if app.user %}
-                <div><a href="/sae301/index.php/logout">Déconnexion</a></div>
+                <a href="/sae301/index.php/logout" class="nav-link">Déconnexion</a>
             {% else %}
                 <a href="/sae301/index.php/login" class="nav-link"><i class="fa-sharp fa-solid fa-right-to-bracket"></i>   Connexion</a>
                     <a href="/sae301/index.php/register" class="nav-link"><i class="fa-sharp fa-solid fa-user-plus"></i>   Inscription</a>
