--- a/public/styles.scss
+++ b/public/styles.scss
@@ -335,171 +335,89 @@ td {
     display: inline-block;
   }
 }
-.site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  margin-top: 50px;
-  font-size: 15px;
-  line-height: 24px;
-  color: #737373;
-  hr {
-    border-top-color: #bbb;
-    opacity: 0.5;
-  }
-  hr.small {
-    margin: 20px 0;
-  }
-  h6 {
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-top: 5px;
-    letter-spacing: 2px;
-  }
-  a {
-    color: #737373;
-    &:hover {
-      color: #3366cc;
-      text-decoration: none;
-    }
-  }
-  .social-icons {
-    text-align: right;
-    a {
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      margin-left: 6px;
-      margin-right: 0;
-      border-radius: 100%;
-      background-color: #33353d;
-    }
-  }
+.container{
+  max-width: 1170px;
+  margin:auto;
 }
-.footer-links {
-  padding-left: 0;
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+ul{
   list-style: none;
-  li {
-    display: block;
-  }
-  a {
-    color: #737373;
-    &:active {
-      color: #3366cc;
-      text-decoration: none;
-    }
-    &:focus {
-      color: #3366cc;
-      text-decoration: none;
-    }
-    &:hover {
-      color: #3366cc;
-      text-decoration: none;
-    }
+}
+.footer{
+  margin-top: 30px;
+  background-color: #fff;
+  border-top: solid 3px black;
+  padding: 70px 0;
+}
+.footer-col{
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4{
+  font-size: 18px;
+  color: black;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before{
+  content: '';
+  position: absolute;
+  left:0;
+  bottom: -10px;
+  background-color: black;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+.footer-col ul li a{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: black;
+  text-decoration: none;
+  font-weight: 300;
+  color: #787878;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+  color: black;
+  padding-left: 8px;
+}
+.footer-col .social-links a{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255,255,255,0.2);
+  margin:0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+  color: #24262b;
+  background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
   }
 }
-.footer-links.inline {
-  li {
-    display: inline-block;
-  }
-}
-.copyright-text {
-  margin: 0;
-}
-.social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  li {
-    display: inline-block;
-    margin-bottom: 4px;
-  }
-  li.title {
-    margin-right: 15px;
-    text-transform: uppercase;
-    color: #96a2b2;
-    font-weight: 700;
-    font-size: 13px;
-  }
-  a {
-    background-color: #eceeef;
-    color: #818a91;
-    font-size: 16px;
-    display: inline-block;
-    line-height: 44px;
-    width: 44px;
-    height: 44px;
-    text-align: center;
-    margin-right: 8px;
-    border-radius: 100%;
-    -webkit-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    transition: all .2s linear;
-    &:active {
-      color: #fff;
-      background-color: #29aafe;
-    }
-    &:focus {
-      color: #fff;
-      background-color: #29aafe;
-    }
-    &:hover {
-      color: #fff;
-      background-color: #29aafe;
-    }
-  }
-  a.facebook {
-    &:hover {
-      background-color: #3b5998;
-    }
-  }
-  a.twitter {
-    &:hover {
-      background-color: #00aced;
-    }
-  }
-  a.linkedin {
-    &:hover {
-      background-color: #007bb6;
-    }
-  }
-  a.dribbble {
-    &:hover {
-      background-color: #ea4c89;
-    }
-  }
-}
-.social-icons.size-sm {
-  a {
-    line-height: 34px;
-    height: 34px;
-    width: 34px;
-    font-size: 14px;
-  }
-}
-@media (max-width:991px) {
-  .site-footer {
-    [class^=col-] {
-      margin-bottom: 30px;
-    }
-  }
-}
-@media (max-width:767px) {
-  .site-footer {
-    padding-bottom: 0;
-    .copyright-text {
-      text-align: center;
-    }
-    .social-icons {
-      text-align: center;
-    }
-  }
-  .social-icons {
-    li.title {
-      display: block;
-      margin-right: 0;
-      font-weight: 600;
-    }
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
   }
 }
 
