--- a/public/styles.css
+++ b/public/styles.css
@@ -342,161 +342,100 @@ td {
   display: inline-block;
 }
 
-.site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  margin-top: 50px;
-  font-size: 15px;
-  line-height: 24px;
-  color: #737373;
-}
-.site-footer hr {
-  border-top-color: #bbb;
-  opacity: 0.5;
-}
-.site-footer hr.small {
-  margin: 20px 0;
-}
-.site-footer h6 {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  margin-top: 5px;
-  letter-spacing: 2px;
-}
-.site-footer a {
-  color: #737373;
-}
-.site-footer a:hover {
-  color: #3366cc;
-  text-decoration: none;
-}
-.site-footer .social-icons {
-  text-align: right;
-}
-.site-footer .social-icons a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  margin-left: 6px;
-  margin-right: 0;
-  border-radius: 100%;
-  background-color: #33353d;
+.container {
+  max-width: 1170px;
+  margin: auto;
 }
 
-.footer-links {
-  padding-left: 0;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul {
   list-style: none;
 }
-.footer-links li {
+
+.footer {
+  margin-top: 30px;
+  background-color: #fff;
+  border-top: solid 3px black;
+  padding: 70px 0;
+}
+
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  color: black;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: black;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: black;
+  text-decoration: none;
+  font-weight: 300;
+  color: #787878;
   display: block;
-}
-.footer-links a {
-  color: #737373;
-}
-.footer-links a:active {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links a:focus {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links a:hover {
-  color: #3366cc;
-  text-decoration: none;
+  transition: all 0.3s ease;
 }
 
-.footer-links.inline li {
-  display: inline-block;
+.footer-col ul li a:hover {
+  color: black;
+  padding-left: 8px;
 }
 
-.copyright-text {
-  margin: 0;
-}
-
-.social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.social-icons li {
+.footer-col .social-links a {
   display: inline-block;
-  margin-bottom: 4px;
-}
-.social-icons li.title {
-  margin-right: 15px;
-  text-transform: uppercase;
-  color: #96a2b2;
-  font-weight: 700;
-  font-size: 13px;
-}
-.social-icons a {
-  background-color: #eceeef;
-  color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
   text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.social-icons a:active {
-  color: #fff;
-  background-color: #29aafe;
-}
-.social-icons a:focus {
-  color: #fff;
-  background-color: #29aafe;
-}
-.social-icons a:hover {
-  color: #fff;
-  background-color: #29aafe;
-}
-.social-icons a.facebook:hover {
-  background-color: #3b5998;
-}
-.social-icons a.twitter:hover {
-  background-color: #00aced;
-}
-.social-icons a.linkedin:hover {
-  background-color: #007bb6;
-}
-.social-icons a.dribbble:hover {
-  background-color: #ea4c89;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
 }
 
-.social-icons.size-sm a {
-  line-height: 34px;
-  height: 34px;
-  width: 34px;
-  font-size: 14px;
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff;
 }
 
-@media (max-width: 991px) {
-  .site-footer [class^=col-] {
+/*responsive*/
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
     margin-bottom: 30px;
   }
 }
-@media (max-width: 767px) {
-  .site-footer {
-    padding-bottom: 0;
-  }
-  .site-footer .copyright-text {
-    text-align: center;
-  }
-  .site-footer .social-icons {
-    text-align: center;
-  }
-  .social-icons li.title {
-    display: block;
-    margin-right: 0;
-    font-weight: 600;
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
   }
 }
 .manif-container {
