--- a/public/styles.css
+++ b/public/styles.css
@@ -49,7 +49,9 @@ table tr td {
 }
 #form .search-bar2 {
   margin-top: 20px;
+  position: relative;
   margin-bottom: 20px;
+  margin-left: -5vw;
   align-items: center;
   height: 3vh;
   width: 30vw;
@@ -412,17 +414,17 @@ ul {
   display: inline-block;
   height: 40px;
   width: 40px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: black;
   margin: 0 10px 10px 0;
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
-  color: #ffffff;
+  color: #fff;
   transition: all 0.5s ease;
 }
 
 .footer-col .social-links a:hover {
-  color: #24262b;
+  color: black;
   background-color: #ffffff;
 }
 
