--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -18,7 +18,7 @@
         <div class="details-container">
             <h4>{{ Manifs.genre }}</h4>
             <p>{{ Manifs.date }} - {{ Manifs.heure }}</p>
-            <div><p id="prix">{{ Manifs.prix }}€ - x<input type="number" value="1" min="1" max="99" id="qte"></p></div>
+            <div><p id="prix">{{ Manifs.prix }}</p>€ - x<input type="number" value="1" min="1" max="99" id="qte"></div>
             <input type="hidden" id="id" value="{{ Manifs.id }}">
             <button id="ajout">Réserver</button>
         </div>
