--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="img-accueil">
-    <h1>Le site qui rassemble tous vos <br>évênements sur Troyes !</h1>
+    <h1>Le site qui rassemble tous vos <br>évènements sur Troyes !</h1>
 </div>
 
 <div class="event-accueil-container">
