--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -13,7 +13,7 @@
         </div>
         <div class="menu">
             <a href="/sae301/index.php/accueil" class="nav-link">Accueil</a>
-            <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Évênements</a>
+            <a href="/sae301/index.php/manifs" class="nav-link evenement-nav-link">Évènements</a>
             <a href="/sae301/index.php/lieu" class="nav-link lieux-nav-link">Lieux</a>
             {% if is_granted("ROLE_ADMIN") %}
                 <a href="/sae301/index.php/admin" class="nav-link"><i class="fa-solid fa-lock"></i>Admin</a>
