--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -20,7 +20,7 @@
             {% endif %}
 
             {% if app.user %}
-                <a href="/sae301/index.php/logout" class="nav-link"><i class="fa-solid fa-user"></i>MonCompte</a>
+                <a href="/sae301/index.php/compte" class="nav-link"><i class="fa-solid fa-user"></i>MonCompte</a>
                 <a href="/sae301/index.php/logout" class="nav-link">Déconnexion</a>
             {% else %}
                 <a href="/sae301/index.php/login" class="nav-link"><i class="fa-sharp fa-solid fa-right-to-bracket"></i>   Connexion</a>
