--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -23,7 +23,7 @@
         <hr>
         <form action="/sae301/index.php/finalisation" method="post">
             <input type="hidden" name="liste" id="liste">
-            <input type="submit" value="Valider ma commande">
+            <input type="submit"class="btn" value="Valider ma commande">
         </form>
         <hr>
         <script type="text/javascript" src="{{ asset('scriptpanier.js') }}"></script>
