--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -4,15 +4,16 @@
 
 {% block body %}
 <style>
-    .example-wrapper { text-align: center; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { text-align: center; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; height: 80vh;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
     <h3>Procéder au paiement :</h3>
-    <form action="">
+    <form action="/sae301/index.php/merci">
         <label>Entrer votre mail PayPal :</label>
-        <imput type="email" required></imput>
+        <input type="email" required>
+        <input type="submit" value="Payer" required>
     </form>
 </div>
 {% endblock %}
