--- a/public/styles.scss
+++ b/public/styles.scss
@@ -186,18 +186,12 @@ h1, h2, h3
   }
 }
 #titre {
-  margin: auto;
   display: flex;
-  height: 25vh;
   text-align: center;
   color: white;
   font-family: "Gopher Bold";
   font-size: 24px;
   background-color: #9747FF;
-  margin-top: 40px;
-  h2 {
-    margin: auto;
-  }
 }
 #titre-connexion
 {
@@ -325,12 +319,11 @@ td {
   color: white;
   height: 25vh;
   width: 100%;
-  text-align: left;
   font-family: "Gopher Bold", sans-serif;
   background-color: #9747FF;
   font-size: 24px;
   position: relative;
-  text-align: center;
+  margin-top: 40px;
   h1, h2 {
     text-align: left;
     float: left;
@@ -464,7 +457,7 @@ ul{
 .img-accueil {
   background-image: url("Image/image-accueil.jpg");
   background-size: 100%;
-  background-position-y: 450px;
+  background-position: bottom;
   height: 50vh;
   display: flex;
   align-items: center;
@@ -474,6 +467,18 @@ ul{
   color: white;
   h1 {
     text-align: center;
+  }
+}
+
+.event-accueil
+{
+  display: flex;
+  height: 150px;
+  padding: 10px;
+
+  .event-accueil-dt
+  {
+    padding-left: 10px;
   }
 }
 
