--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,6 +13,13 @@
 </div>
 
 <div class="event-accueil-container">
-
+     <div class="event-accueil">
+         <img src="{{ asset("Image/aldebert.jpg") }}" alt="">
+         <div class="event-accueil-dt">
+             <h2>Enfentillage 4</h2>
+             <h3>Aldebert</h3>
+             <p>Le Cube - Troyes Champagne Expo - 20h00 </p>
+         </div>
+     </div>
 </div>
 {% endblock %}
