--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -26,8 +26,8 @@
         }
 
     </style>
-    <div id="titre">
-        <h2>Evenements</h2>
+    <div id="manif-titre">
+        <h2>Évênements</h2>
     </div>
     <div id="form">
         {{ form(form) }}
