--- a/public/styles.scss
+++ b/public/styles.scss
@@ -495,26 +495,31 @@ ul{
   }
   .logo {
     position: relative;
-    z-index: 20;
+    z-index: 0;
   }
   .ouvrir {
     display: block;
-    font-size: 100px;
-    margin-right: 30px;
+    margin-left: 80vw;
     margin-top: 10px;
+    z-index: 101;
   }
   .fermer {
     display: none;
     font-size: 110px;
     margin-right: 30px;
+    z-index: 101;
   }
   .open {
     .ouvrir {
       display: none;
+      z-index: 101;
     }
 
     .fermer {
       display: block;
+      z-index: 101;
+      transform: translate(-17%, -35%);
+      transition: transform 1s;
     }
 
     .menu {
@@ -523,17 +528,18 @@ ul{
   }
   .menu {
     position: absolute;
-    display: flex;
+    display: flex!important;
     top: 0;
     left: 0;
-    width: 80%;
-    height: 100vh;
+    width: 80%!important;
+    height: 100vh!important;
     border-right: #000 solid 6px;
     background: #fff;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-evenly!important;
     transform: translateX(-100%);
     transition: transform 1s;
+    z-index: 10;
 
     div {
       display: flex;
@@ -588,7 +594,7 @@ ul{
     }
 
     a {
-      font-size: 3rem;
+      font-size: 50px!important;
       text-decoration: none;
       color: #000;
       margin: auto;
