--- a/public/styles.css
+++ b/public/styles.css
@@ -215,8 +215,8 @@ h1, h2, h3 {
   flex-direction: column;
   margin: auto;
   margin-top: 50px;
-  width: 18vw;
-  height: 52vh;
+  width: 250px;
+  height: 450px;
   border: solid #343434 2px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: 500ms;
@@ -471,6 +471,7 @@ ul {
 
 .img-accueil {
   background-image: url("Image/image-accueil.jpg");
+  background-repeat: no-repeat;
   background-size: 100%;
   background-position: bottom;
   height: 50vh;
@@ -590,7 +591,7 @@ ul {
     margin: auto;
   }
   .btn {
-    font-size: 2rem;
+    font-size: 20px;
   }
 }
 
