update manif détail, accueil, menu (search bar deleted) + styles.css

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,13 +13,114 @@
 </div>
 
 <div class="event-accueil-container">
-     <div class="event-accueil">
-         <img src="{{ asset("Image/aldebert.jpg") }}" alt="">
-         <div class="event-accueil-dt">
-             <h2>Enfentillage 4</h2>
-             <h3>Aldebert</h3>
-             <p>Le Cube - Troyes Champagne Expo - 20h00 </p>
-         </div>
-     </div>
+    <div class="event-container">
+        <h1>Les évênements du moment</h1>
+        <a href="/sae301/index.php/manifs/3" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/aldebert.jpg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Enfentillage 4</h2>
+                    <h3>Aldebert</h3>
+                    <p>Le Cube - Troyes Champagne Expo</p>
+                    <p>10/12/2022 - 20h00</p>
+                </div>
+            </div>
+        </a>
+        <a href="/sae301/index.php/manifs/8" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/aquarelle.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Aquarelliste</h2>
+                    <h3>Maryse Louis</h3>
+                    <p>Salles Raymond Moretti de la Maison du Boulanger</p>
+                    <p>03/12/2022 - 15h00</p>
+                </div>
+            </div>
+        </a>
+        <a href="/sae301/index.php/manifs/4" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/michaelgregorio.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>L'Odysée de la voix</h2>
+                    <h3>Michaël Gregorio</h3>
+                    <p>Le Cube - Troyes Champagne Expo</p>
+                    <p>11/12/2022 - 17h30</p>
+                </div>
+            </div>
+        </a>
+        <a href="/sae301/index.php/manifs/21" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/grandcorpsmalade.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Grand corps malade</h2>
+                    <h3>Jean Rachid</h3>
+                    <p>Le Cube - Troyes Champagne Expo</p>
+                    <p>30/11/2022 - 20h00</p>
+                </div>
+            </div>
+        </a>
+        <a href="/sae301/index.php/manifs/18" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/juliendore.png") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>aimée la tournée</h2>
+                    <h3>Julien Doré</h3>
+                    <p>Le Cube - Troyes Champagne Expo</p>
+                    <p>25/11/2022 - 20h00</p>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="event-container">
+        <h1>Les salles emblématiques de Troyes</h1>
+        <a href="https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/cube.gif") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Le Cube - Troyes Champagne Expo</h2>
+                    <h3>1000 places</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/troisfoisplus.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Le Troyes Fois Plus</h2>
+                    <h3>200 plcaes</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/madeleine.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>La Madeleine</h2>
+                    <h3>300 places</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/lamaisonduboulanger.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>Salles Raymond Moretti<br> de la Maison du Boulanger</h2>
+                    <h3>50 places</h3>
+                </div>
+            </div>
+        </a>
+        <a href="https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z" class="event-accueil-link">
+            <div class="event-accueil">
+                <img src="{{ asset("Image/artdeco.jpeg") }}" alt="">
+                <div class="event-accueil-dt">
+                    <h2>L'Art Déco</h2>
+                    <h3>100 places</h3>
+                </div>
+            </div>
+        </a>
+    </div>
 </div>
 {% endblock %}
