--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -17,6 +17,7 @@
         </div>
         <div class="details-container">
             <h4>{{ Manifs.genre }}</h4>
+            <p>{{ Manifs.lieu }}</p>
             <p>{{ Manifs.date }} - {{ Manifs.heure }}</p>
             <div><p id="prix">{{ Manifs.prix }}</p>€ - x<input type="number" value="1" min="1" max="99" id="qte"></div>
             <input type="hidden" id="id" value="{{ Manifs.id }}">
