--- a/public/styles.css
+++ b/public/styles.css
@@ -56,7 +56,7 @@ table tr td {
   height: 3vh;
   width: 30vw;
   padding: 20px;
-  border-bottom: solid black 3px;
+  border: solid black 3px;
 }
 h1, h2, h3 {
   font-weight: normal;
