Revert "Merge remote-tracking branch 'origin/main'"
This reverts commit eab64c81c3e12ff9639337bfdacfec25e17398b2, reversing
changes made to dd3ac000069c5f0533a1a2dbb32204bf7f47af4f.

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -21,7 +21,7 @@
         <tfoot><tr><td id="bas" colspan="4"></td><td><span id="total">0</span>€</td></tr></tfoot>
         </table>
         <hr>
-        <form action="/sae301/index.php/paiement" method="post">
+        <form action="/sae301/index.php/finalisation" method="post">
             <input type="hidden" name="liste" id="liste">
             <input type="submit"class="btn" value="Valider ma commande">
         </form>
