--- a/public/styles.css
+++ b/public/styles.css
@@ -90,22 +90,8 @@ h1, h2, h3 {
 .menu-container {
   width: 100%;
   height: 100%;
-}
-.menu-container .search-bar {
   display: flex;
   align-items: center;
-  height: 50%;
-  border-bottom: solid black 3px;
-}
-.menu-container .search-bar img {
-  height: 50%;
-  padding-left: 10px;
-}
-.menu-container .search-bar input {
-  height: 100%;
-  width: 100%;
-  border: none;
-  padding-left: 10px;
 }
 .menu-container .menu {
   display: flex;
@@ -215,7 +201,7 @@ h1, h2, h3 {
   flex-direction: column;
   margin: auto;
   margin-top: 50px;
-  width: 18vw;
+  width: 14vw;
   height: 52vh;
   border: solid #343434 2px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -485,13 +471,46 @@ ul {
   text-align: center;
 }
 
-.event-accueil {
+.event-accueil-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.event-accueil-container .event-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.event-accueil-container .event-container h1 {
+  text-align: center;
+  font-family: "Gopher Bold", sans-serif;
+}
+.event-accueil-container .event-container .event-accueil-link {
+  color: black;
+  text-decoration: none;
+  margin: 10px;
+  transition: 500ms;
+}
+.event-accueil-container .event-container .event-accueil-link:hover {
+  box-shadow: 10px 10px 0px 0px #9747FF, 10px 10px 0px 2.5px black;
+  transform: translateX(-10px);
+  transition: 500ms;
+}
+.event-accueil-container .event-container .event-accueil-link .event-accueil {
   display: flex;
   height: 150px;
   padding: 10px;
+  border: solid #343434 3px;
 }
-.event-accueil .event-accueil-dt {
+.event-accueil-container .event-container .event-accueil-link .event-accueil .event-accueil-dt {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-left: 10px;
+}
+.event-accueil-container .event-container .event-accueil-link .event-accueil .event-accueil-dt h2, .event-accueil-container .event-container .event-accueil-link .event-accueil .event-accueil-dt h3 {
+  font-family: "Gopher Bold", sans-serif;
 }
 
 @media all and (max-width: 991px) {
