--- a/public/styles.scss
+++ b/public/styles.scss
@@ -88,24 +88,8 @@ h1, h2, h3
 .menu-container {
   width: 100%;
   height: 100%;
-  .search-bar
-  {
-    display: flex;
-    align-items: center;
-    height: 50%;
-    border-bottom: solid black 3px;
-    img {
-      height: 50%;
-      padding-left: 10px;
-    }
-    input {
-      height: 100%;
-      width: 100%;
-      border: none;
-      padding-left: 10px;
-    }
-
-  }
+  display: flex;
+  align-items: center;
   .menu {
     display: flex;
     justify-content: space-between;
@@ -215,7 +199,7 @@ h1, h2, h3
   flex-direction: column;
   margin: auto;
   margin-top: 50px;
-  width: 18vw;
+  width: 14vw;
   height: 52vh;
   border: solid #343434 2px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -470,17 +454,54 @@ ul{
   }
 }
 
-.event-accueil
+.event-accueil-container
 {
   display: flex;
-  height: 150px;
-  padding: 10px;
-
-  .event-accueil-dt
+  justify-content: center;
+  margin-top: 40px;
+  .event-container
   {
-    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h1 {
+      text-align: center;
+      font-family: "Gopher Bold", sans-serif;
+    }
+    .event-accueil-link
+    {
+      color: black;
+      text-decoration: none;
+      margin: 10px;
+      transition: 500ms;
+      &:hover
+      {
+        box-shadow: 10px 10px 0px 0px #9747FF,10px 10px 0px 2.5px black;
+        transform: translateX(-10px);
+        transition: 500ms;
+      }
+      .event-accueil
+      {
+        display: flex;
+        height: 150px;
+        padding: 10px;
+        border: solid #343434 3px;
+        .event-accueil-dt
+        {
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding-left: 10px;
+          h2, h3 {
+            font-family: "Gopher Bold", sans-serif;
+          }
+        }
+      }
+    }
   }
 }
+
 
 @media all and (max-width: 991px) {
   header {
