--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -6,6 +6,13 @@
 <style>
     .example-wrapper { text-align: center; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; height: 80vh;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    form {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    h3 {
+        margin-top: 30px;
+    }
 </style>
 
 <div class="example-wrapper">
