--- a/public/styles.scss
+++ b/public/styles.scss
@@ -511,6 +511,7 @@ ul{
   .toggle {
     display: block;
     font-size: 60px;
+    margin-right: 20px;
     cursor: pointer;
     position: relative;
     z-index: 20;
@@ -540,7 +541,7 @@ ul{
     .fermer {
       display: block;
       z-index: 101;
-      transform: translate(-17%, -35%);
+      transform: translate(-180%, 0%);
       transition: transform 1s;
     }
 
