--- a/public/styles.scss
+++ b/public/styles.scss
@@ -30,12 +30,36 @@ nav {
   box-shadow: 3px 3px 6px -1px rgba(0, 0, 0, 0.25);}
 table {
   width: 50%;
+  margin: auto;
   tr {
     border: 1px black solid;
     td {
       border: none;
       text-align: center;
+      .moins{
+        width: 30%;
+        height: 30px;
+        border: solid #343434 3px;
+        background-color: transparent;
+        cursor: pointer;
+        padding: 10px;
+        font-size: 14px;
+        font-family: "Gopher Bold";
+      }
+      .plus{
+        width: 30%;
+        height: 30px;
+        border: solid #343434 3px;
+        background-color: transparent;
+        cursor: pointer;
+        padding: 10px;
+        font-size: 14px;
+        font-family: "Gopher Bold";
+      }
     }
+  }
+  img {
+    width: 10vw;
   }
 }
 #form {
